hphp/hack/test/typecheck/classname/bad_subclass.php.exp
File "bad_subclass.php", line 18, characters 19-33:
Member nameOfISubclass has the wrong type (Typing[4341])
File "bad_subclass.php", line 8, characters 57-57:
Expected I
File "bad_subclass.php", line 18, characters 48-53:
But got C_notI
